chore: make transformation reversible (deprecate -> retire)