@@ -26,9 +26,9 @@ class CardClassTest {
     }
 
     @Test
-    void cantDealFromDeprecatedSerie() {
+    void cantDealFromRetiredSerie() {
         final CardClass cardClass = CardClass.builder().cardClass(COMMON_CLASS).isInfinite(false).series(Collections.emptyList())
-                .deprecatedSeries(Collections.singletonList(new CardSerie("test", 2))).build();
+                .retiredSeries(Collections.singletonList(new CardSerie("test", 2))).build();
         long seed = r.nextLong();
         Assertions.assertThrows(CardClassEmpty.class, () -> cardClass.pickCard(seed));
     }
@@ -45,10 +45,10 @@ class CardClassTest {
     }
 
     @Test
-    void dealFromSerieAndDeprecatedSerie() {
+    void dealFromSerieAndRetiredSerie() {
         final CardClass cardClassOfOneSerie = CardClass.builder().cardClass(COMMON_CLASS).isInfinite(false)
                 .series(List.of(new CardSerie("test", 2)))
-                .deprecatedSeries(List.of(new CardSerie("black", 2))).build();
+                .retiredSeries(List.of(new CardSerie("black", 2))).build();
         final CardClass.PickCardResult result1 = cardClassOfOneSerie.pickCard(r.nextLong());
         Assertions.assertEquals(new Card(COMMON_CLASS, "test", 1), result1.card);
         final CardClass.PickCardResult result2 = result1.remainingCards.pickCard(r.nextLong());
@@ -86,15 +86,15 @@ class CardClassTest {
     }
 
     @Test
-    void addCardToDeprecatedSerie() {
+    void addCardToRetiredSerie() {
         CardClass cardClass = CardClass.builder()
                 .cardClass(COMMON_CLASS)
                 .isInfinite(false)
                 .series(List.of(new CardSerie("orange", 3)))
-                .deprecatedSeries(List.of(new CardSerie("blue", 2).removeCard(1)))
+                .retiredSeries(List.of(new CardSerie("blue", 2).removeCard(1)))
                 .build();
         CardClass restoredCardClass = cardClass.addCard(new Card(COMMON_CLASS, "blue", 1));
-        Assertions.assertEquals(2, restoredCardClass.getDeprecatedCardSerieByName("blue").count());
+        Assertions.assertEquals(2, restoredCardClass.getRetiredCardSerieByName("blue").count());
         Assertions.assertEquals(3, restoredCardClass.getCardSerieByName("orange").count());
     }
 
@@ -116,7 +116,7 @@ class CardClassTest {
     }
 
     @Test
-    void deprecateSeries() {
+    void retireSeries() {
         final CardSerie serieOne = new CardSerie("one", 1);
         final CardSerie serieTwo = new CardSerie("two", 1);
         final CardSerie serieThree = new CardSerie("three", 1);
@@ -125,21 +125,49 @@ class CardClassTest {
                 .cardClass(COMMON_CLASS)
                 .isInfinite(false)
                 .series(List.of(serieOne, serieTwo, serieThree))
-                .deprecatedSeries(List.of(serieFour))
+                .retiredSeries(List.of(serieFour))
                 .build();
-        final CardClass newCardClass = cardClass.deprecateSeriesByName(List.of("one", "three"));
+        final CardClass newCardClass = cardClass.modifyActiveSeries(List.of("one", "three"), Collections.emptyList());
         Assertions.assertEquals(List.of(serieTwo), newCardClass.series);
-        Assertions.assertEquals(List.of(serieFour, serieOne, serieThree), newCardClass.deprecatedSeries);
+        Assertions.assertEquals(List.of(serieFour, serieOne, serieThree), newCardClass.retiredSeries);
     }
 
     @Test
-    void deprecateUnexistingSerie() {
+    void reinstateSeries() {
+        final CardSerie serieOne = new CardSerie("one", 1);
+        final CardSerie serieTwo = new CardSerie("two", 1);
+        final CardSerie serieThree = new CardSerie("three", 1);
+        final CardSerie serieFour = new CardSerie("four", 1);
+        final CardClass cardClass = CardClass.builder()
+                .cardClass(COMMON_CLASS)
+                .isInfinite(false)
+                .series(List.of(serieOne))
+                .retiredSeries(List.of(serieTwo, serieThree, serieFour))
+                .build();
+        final CardClass newCardClass = cardClass.modifyActiveSeries(Collections.emptyList(), List.of("two", "four"));
+        Assertions.assertEquals(List.of(serieOne, serieTwo, serieFour), newCardClass.series);
+        Assertions.assertEquals(List.of(serieThree), newCardClass.retiredSeries);
+    }
+
+    @Test
+    void retireUnexistingSerie() {
         final CardSerie serieOne = new CardSerie("one", 1);
         final CardClass cardClass = CardClass.builder()
                 .cardClass(COMMON_CLASS)
                 .isInfinite(false)
                 .series(List.of(serieOne))
                 .build();
-        Assertions.assertThrows(NoSuchCardSerie.class, () -> cardClass.deprecateSeriesByName(List.of("two")));
+        Assertions.assertThrows(NoSuchCardSerie.class, () -> cardClass.modifyActiveSeries(List.of("two"), Collections.emptyList()));
+    }
+
+    @Test
+    void reinstateUnexistingSerie() {
+        final CardSerie serieOne = new CardSerie("one", 1);
+        final CardClass cardClass = CardClass.builder()
+                .cardClass(COMMON_CLASS)
+                .isInfinite(false)
+                .series(List.of(serieOne))
+                .build();
+        Assertions.assertThrows(NoSuchCardSerie.class, () -> cardClass.modifyActiveSeries(Collections.emptyList(), List.of("two")));
     }
 }
